fix: добавить alt кнопкам

--- a/index.html
+++ b/index.html
@@ -30,48 +30,48 @@
           <img class="element__image" src="./images/element-petra.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Петра</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg"></button>
+            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/element-grand-canyon.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Гранд-Каньон</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg"></button>
+            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/element-yellowstone-park.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Йеллоустон</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg"></button>
+            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/element-niagara-falls.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Ниагарский водопад</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg"></button>
+            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/element-yosemite-falls.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Йосемитcкий водопад</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg"></button>
+            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/element-victoria-falls.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Водопад Виктория</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg"></button>
+            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
           </div>
         </div>
       </section>
       <section class="popup">
         <div class="popup__container">
-          <button class="popup__button-close" type="button" alt="Закрыть"><img class="popup__icon-cross" src="./images/close-button.svg" alt="Закрыть"></button>
+          <button class="popup__button-close" type="button"><img class="popup__icon-cross" src="./images/close-button.svg" alt="Закрыть"></button>
           <form class="popup__form">
             <h3 class="popup__header">Редактировать профиль</h3>
             <input class="popup__input popup__input_type_username" type="text"  name="username" required>
