fix: устранить замечания

--- a/index.html
+++ b/index.html
@@ -17,73 +17,73 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" src="./images/profile-cousteau.jpg" alt="Фото Жака-Ива Кусто">
+        <img class="profile__avatar" src="./images/profile-cousteau.jpg" alt="Аватар пользователя">
         <div class="profile__info">
           <h1 class="profile__username">Жак-Ив Кусто</h1>
-          <button class="profile__button-edit" type="button"><img class="profile__icon-pen" src="./images/edit-button.svg" alt="Редактировать"></button>
+          <button class="profile__button-edit" type="button"></button>
           <p class="profile__occupation">Исследователь океана</p>
         </div>
-        <button class="profile__button-add" type="button"><img class="profile__icon-plus" src="./images/add-button.svg" alt="Добавить"></button>
+        <button class="profile__button-add" type="button"></button>
       </section>
       <section class="elements">
-        <div class="element">
+        <article class="element">
           <img class="element__image" src="./images/element-petra.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Петра</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
+            <button class="element__button-like" type="button"></button>
           </div>
-        </div>
-        <div class="element">
+        </article>
+        <article class="element">
           <img class="element__image" src="./images/element-grand-canyon.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Гранд-Каньон</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
+            <button class="element__button-like" type="button"></button>
           </div>
-        </div>
-        <div class="element">
+        </article>
+        <article class="element">
           <img class="element__image" src="./images/element-yellowstone-park.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Йеллоустон</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
+            <button class="element__button-like" type="button"></button>
           </div>
-        </div>
-        <div class="element">
+        </article>
+        <article class="element">
           <img class="element__image" src="./images/element-niagara-falls.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Ниагарский водопад</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
+            <button class="element__button-like" type="button"></button>
           </div>
-        </div>
-        <div class="element">
+        </article>
+        <article class="element">
           <img class="element__image" src="./images/element-yosemite-falls.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Йосемитcкий водопад</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
+            <button class="element__button-like" type="button"></button>
           </div>
-        </div>
-        <div class="element">
+        </article>
+        <article class="element">
           <img class="element__image" src="./images/element-victoria-falls.jpg" alt="Фотография Петры">
           <div class="element__info">
             <h2 class="element__title">Водопад Виктория</h2>
-            <button class="element__button-like"><img src="./images/like-button.svg" alt="Лайк"></button>
+            <button class="element__button-like" type="button"></button>
           </div>
-        </div>
-      </section>
-      <section class="popup">
-        <div class="popup__container">
-          <button class="popup__button-close" type="button"><img class="popup__icon-cross" src="./images/close-button.svg" alt="Закрыть"></button>
-          <form class="popup__form">
-            <h3 class="popup__header">Редактировать профиль</h3>
-            <input class="popup__input popup__input_type_username" type="text"  name="username" required>
-            <input class="popup__input popup__input_type_occupation" type="text" name="occupation" required>
-            <button class="popup__button-save" type="submit">Сохранить</button>
-          </form>
-        </div>
+        </article>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
+    <div class="popup">
+      <div class="popup__container">
+        <button class="popup__button-close" type="button"></button>
+        <form class="popup__form" name="profile__edit">
+          <h2 class="popup__header">Редактировать профиль</h2>
+          <input class="popup__input popup__input_type_username" type="text" name="username" placeholder="Введите имя пользователя" required>
+          <input class="popup__input popup__input_type_occupation" type="text" name="occupation" placeholder="Введите профессию" required>
+          <button class="popup__button-save" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
