--- a/index.html
+++ b/index.html
@@ -26,57 +26,15 @@
         <button class="profile__button-add" type="button"></button>
       </section>
       <section class="elements">
-        <article class="element">
-          <img class="element__image" src="./images/element-petra.jpg" alt="Фотография Петры">
-          <div class="element__info">
-            <h2 class="element__title">Петра</h2>
-            <button class="element__button-like" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/element-grand-canyon.jpg" alt="Фотография Петры">
-          <div class="element__info">
-            <h2 class="element__title">Гранд-Каньон</h2>
-            <button class="element__button-like" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/element-yellowstone-park.jpg" alt="Фотография Петры">
-          <div class="element__info">
-            <h2 class="element__title">Йеллоустон</h2>
-            <button class="element__button-like" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/element-niagara-falls.jpg" alt="Фотография Петры">
-          <div class="element__info">
-            <h2 class="element__title">Ниагарский водопад</h2>
-            <button class="element__button-like" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/element-yosemite-falls.jpg" alt="Фотография Петры">
-          <div class="element__info">
-            <h2 class="element__title">Йосемитcкий водопад</h2>
-            <button class="element__button-like" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/element-victoria-falls.jpg" alt="Фотография Петры">
-          <div class="element__info">
-            <h2 class="element__title">Водопад Виктория</h2>
-            <button class="element__button-like" type="button"></button>
-          </div>
-        </article>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_edit-profile">
       <div class="popup__container">
-        <button class="popup__button-close" type="button"></button>
-        <form class="popup__form" name="profile__edit">
+        <button class="popup__button-close popup__button-close_type_profile" type="button"></button>
+        <form class="popup__form popup__form_type_profile" name="profile__edit">
           <h2 class="popup__header">Редактировать профиль</h2>
           <input class="popup__input popup__input_type_username" type="text" name="username" placeholder="Введите имя пользователя" required>
           <input class="popup__input popup__input_type_occupation" type="text" name="occupation" placeholder="Введите профессию" required>
@@ -84,7 +42,36 @@
         </form>
       </div>
     </div>
+    <div class="popup popup_type_add-card">
+      <div class="popup__container">
+        <button class="popup__button-close popup__button-close_type_card" type="button"></button>
+        <form class="popup__form popup__form_type_card" name="add-card">
+          <h2 class="popup__header">Новое место</h2>
+          <input class="popup__input popup__input_type_card-name" type="text" name="card-name" placeholder="Название" required>
+          <input class="popup__input popup__input_type_card-link" type="text" name="card-link" placeholder="Ссылка на картинку" required>
+          <button class="popup__button-save" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_view-card">
+      <div class="popup__view-card-container">
+        <button class="popup__button-close popup__button-close_type_view-card" type="button"></button>
+        <img class="popup__view-card-photo" src="" alt="">
+        <figcaption class="popup__view-card-caption"></figcaption>
+       </div>
+    </div>
   </div>
+  <template id="element-template">
+    <article class="element">
+      <img class="element__image" src="" alt="">
+      <button class="element__button-delete" type="button"></button>
+      <div class="element__info">
+        <h2 class="element__title"></h2>
+        <button class="element__button-like" type="button"></button>
+      </div>
+    </article>
+  </template>
+  <script src="./scripts/template.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
