fix: задать значение атрибуту src и alt тега img

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <div class="popup popup_type_view-card">
       <div class="popup__view-card-container">
         <button class="popup__button-close popup__button-close_type_view-card" type="button"></button>
-        <img class="popup__view-card-photo" src="" alt="">
-        <figcaption class="popup__view-card-caption"></figcaption>
+        <img class="popup__view-card-photo" src="#" alt="#">
+        <p class="popup__view-card-caption"></p>
        </div>
     </div>
   </div>
   <template id="element-template">
     <article class="element">
-      <img class="element__image" src="" alt="">
+      <img class="element__image" src="#" alt="#">
       <button class="element__button-delete" type="button"></button>
       <div class="element__info">
         <h2 class="element__title"></h2>
@@ -71,7 +71,6 @@
       </div>
     </article>
   </template>
-  <script src="./scripts/template.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
