--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </div>
     </article>
   </template>
+  <script src="./scripts/template.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
