--- a/index.html
+++ b/index.html
@@ -32,29 +32,33 @@
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
     <div class="popup popup_type_edit-profile">
-      <div class="popup__container">
+      <div class="popup__container popup__container_type_form">
         <button class="popup__button-close popup__button-close_type_profile" type="button"></button>
-        <form class="popup__form popup__form_type_profile" name="profile__edit">
+        <form class="popup__form popup__form_type_profile" name="profile__edit" novalidate>
           <h2 class="popup__header">Редактировать профиль</h2>
-          <input class="popup__input popup__input_type_username" type="text" name="username" placeholder="Введите имя пользователя" required>
-          <input class="popup__input popup__input_type_occupation" type="text" name="occupation" placeholder="Введите профессию" required>
-          <button class="popup__button-save" type="submit">Сохранить</button>
+          <input class="popup__input popup__input_type_username" type="text" id="user-name" name="user-name" placeholder="Имя" minlength="2" maxlength="40" required>
+          <span id="user-name-error" class="popup__error"></span>
+          <input class="popup__input popup__input_type_occupation" type="text" id="about" name="about" placeholder="О себе" minlength="2" maxlength="200" required>
+          <span id="about-error" class="popup__error"></span>
+          <button class="button popup__button popup__button-save" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
     <div class="popup popup_type_add-card">
-      <div class="popup__container">
+      <div class="popup__container popup__container_type_form">
         <button class="popup__button-close popup__button-close_type_card" type="button"></button>
-        <form class="popup__form popup__form_type_card" name="add-card">
+        <form class="popup__form popup__form_type_card" name="add-card" novalidate>
           <h2 class="popup__header">Новое место</h2>
-          <input class="popup__input popup__input_type_card-name" type="text" name="card-name" placeholder="Название" required>
-          <input class="popup__input popup__input_type_card-link" type="text" name="card-link" placeholder="Ссылка на картинку" required>
-          <button class="popup__button-save" type="submit">Создать</button>
+          <input class="popup__input popup__input_type_card-name" type="text" id="card-name" name="card-name" placeholder="Название" minlength="2" maxlength="30" required>
+          <span id="card-name-error" class="popup__error"></span>
+          <input class="popup__input popup__input_type_card-link" type="url" id="card-link" name="card-link" placeholder="Ссылка на картинку" required>
+          <span id="card-link-error" class="popup__error"></span>
+          <button class="button popup__button popup__button-save" type="submit">Создать</button>
         </form>
       </div>
     </div>
     <div class="popup popup_type_view-card">
-      <div class="popup__view-card-container">
+      <div class="popup__container popup__container_type_view-card">
         <button class="popup__button-close popup__button-close_type_view-card" type="button"></button>
         <img class="popup__view-card-photo" src="#" alt="#">
         <p class="popup__view-card-caption"></p>
@@ -72,6 +76,7 @@
     </article>
   </template>
   <script src="./scripts/template.js"></script>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
