--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
       </div>
     </article>
   </template>
-  <script src="./scripts/template.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/template.js" type="module"></script>
+  <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
