--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,20 @@
   <meta name="description" content="проектная работа 4 Яны Замятиной на Яндекс.Практикуме">
   <meta name="keywords" content="путешествие, Жак-ив, Кусто, Россия">
   <meta name="author" content="Яна Замятина">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Место Россия</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Mesto Russia">
+      <img class="header__logo" src="<%=require('./images/header-logo.svg')%>" alt="Mesto Russia">
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" src="./images/profile-cousteau.jpg" alt="Аватар пользователя">
+        <img class="profile__avatar" src="<%=require('./images/profile-cousteau.jpg')%>" alt="Аватар пользователя">
         <div class="profile__info">
-          <h1 class="profile__username">Жак-Ив Кусто</h1>
+          <h1 class="profile__username" name="username">Жак-Ив Кусто</h1>
           <button class="profile__button-edit" type="button"></button>
-          <p class="profile__occupation">Исследователь океана</p>
+          <p class="profile__occupation" name="about">Исследователь океана</p>
         </div>
         <button class="profile__button-add" type="button"></button>
       </section>
@@ -36,7 +35,7 @@
         <button class="popup__button-close popup__button-close_type_profile" type="button"></button>
         <form class="popup__form popup__form_type_profile" name="profile__edit" novalidate>
           <h2 class="popup__header">Редактировать профиль</h2>
-          <input class="popup__input popup__input_type_username" type="text" id="user-name" name="user-name" placeholder="Имя" minlength="2" maxlength="40" required>
+          <input class="popup__input popup__input_type_username" type="text" id="user-name" name="username" placeholder="Имя" minlength="2" maxlength="40" required>
           <span id="user-name-error" class="popup__error"></span>
           <input class="popup__input popup__input_type_occupation" type="text" id="about" name="about" placeholder="О себе" minlength="2" maxlength="200" required>
           <span id="about-error" class="popup__error"></span>
@@ -49,9 +48,9 @@
         <button class="popup__button-close popup__button-close_type_card" type="button"></button>
         <form class="popup__form popup__form_type_card" name="add-card" novalidate>
           <h2 class="popup__header">Новое место</h2>
-          <input class="popup__input popup__input_type_card-name" type="text" id="card-name" name="card-name" placeholder="Название" minlength="2" maxlength="30" required>
+          <input class="popup__input popup__input_type_card-name" type="text" id="card-name" name="name" placeholder="Название" minlength="2" maxlength="30" required>
           <span id="card-name-error" class="popup__error"></span>
-          <input class="popup__input popup__input_type_card-link" type="url" id="card-link" name="card-link" placeholder="Ссылка на картинку" required>
+          <input class="popup__input popup__input_type_card-link" type="url" id="card-link" name="link" placeholder="Ссылка на картинку" required>
           <span id="card-link-error" class="popup__error"></span>
           <button class="button popup__button popup__button-save" type="submit">Создать</button>
         </form>
@@ -75,6 +74,5 @@
       </div>
     </article>
   </template>
-  <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
