--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,14 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('./images/profile-cousteau.jpg')%>" alt="Аватар пользователя">
+        <div class="profile__avatar">
+          <img class="profile__avatar-image" src="<%=require('./images/profile-cousteau.jpg')%>" alt="Аватар пользователя">
+          <button class="profile__avatar-edit" type="button"></button>
+        </div>
         <div class="profile__info">
-          <h1 class="profile__username" name="username">Жак-Ив Кусто</h1>
+          <h1 class="profile__username" name="name">Жак-Ив Кусто</h1>
           <button class="profile__button-edit" type="button"></button>
-          <p class="profile__occupation" name="about">Исследователь океана</p>
+          <p class="profile__about" name="about">Исследователь океана</p>
         </div>
         <button class="profile__button-add" type="button"></button>
       </section>
@@ -35,11 +38,11 @@
         <button class="popup__button-close popup__button-close_type_profile" type="button"></button>
         <form class="popup__form popup__form_type_profile" name="profile__edit" novalidate>
           <h2 class="popup__header">Редактировать профиль</h2>
-          <input class="popup__input popup__input_type_username" type="text" id="user-name" name="username" placeholder="Имя" minlength="2" maxlength="40" required>
-          <span id="user-name-error" class="popup__error"></span>
-          <input class="popup__input popup__input_type_occupation" type="text" id="about" name="about" placeholder="О себе" minlength="2" maxlength="200" required>
-          <span id="about-error" class="popup__error"></span>
-          <button class="button popup__button popup__button-save" type="submit">Сохранить</button>
+          <input class="popup__input popup__input_type_username" type="text" id="profile-name" name="name" placeholder="Имя" minlength="2" maxlength="40" required>
+          <span id="profile-name-error" class="popup__error"></span>
+          <input class="popup__input popup__input_type_about" type="text" id="profile-about" name="about" placeholder="О себе" minlength="2" maxlength="200" required>
+          <span id="profile-about-error" class="popup__error"></span>
+          <button class="button popup__button popup__button_type_save" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
@@ -52,7 +55,27 @@
           <span id="card-name-error" class="popup__error"></span>
           <input class="popup__input popup__input_type_card-link" type="url" id="card-link" name="link" placeholder="Ссылка на картинку" required>
           <span id="card-link-error" class="popup__error"></span>
-          <button class="button popup__button popup__button-save" type="submit">Создать</button>
+          <button class="button popup__button popup__button_type_save" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_delete-card">
+      <div class="popup__container popup__container_type_delete">
+        <button class="popup__button-close popup__button-close_type_delete" type="button"></button>
+        <form class="popup__form popup__form_type_delete" name="delete" novalidate>
+          <h2 class="popup__header">Вы уверены?</h2>
+          <button class="button popup__button popup__button_type_delete" type="submit">Да</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_avatar">
+      <div class="popup__container popup__container_type_avatar">
+        <button class="popup__button-close popup__button-close_type_avatar" type="button"></button>
+        <form class="popup__form popup__form_type_avatar" name="avatar" novalidate>
+          <h2 class="popup__header">Обновить аватар</h2>
+          <input class="popup__input popup__input_type_avatar-link" type="url" id="avatar" name="avatar" placeholder="https://somewebsite.com/someimage.jpg" required>
+          <span id="avatar-error" class="popup__error"></span>
+          <button class="button popup__button popup__button_type_save" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
@@ -70,7 +93,10 @@
       <button class="element__button-delete" type="button"></button>
       <div class="element__info">
         <h2 class="element__title"></h2>
-        <button class="element__button-like" type="button"></button>
+        <div class="element__like">
+          <button class="element__button-like" type="button"></button>
+          <p class="element__like-count">0</p>
+        </div>
       </div>
     </article>
   </template>
